# ros2-drone-sim

./: CMakeLists.txt  README.md  package.xml
launch/: drone_sim.launch.py
src/drone_sim/: motor_controller.py  teleop_keyboard.py
urdf/: drone.urdf.xacro
worlds/: drone_world.world
