<?xml version="1.0"?>
<package format="2">
  <name>drone_sim</name>
  <version>0.0.1</version>
  <description>ROS2 Drone Simulation with Gazebo</description>
  <maintainer email="frknkirin@example.com">Frknkirin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo-dev</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
